--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: api-gestorv
     env: java
     plan: free
-    buildCommand: mvnw clean install
-    startCommand: java -jar target/*.jar
+    buildCommand: mvnw clean install -DskipTests
+    startCommand: java -jar target/Api-GestorV-0.0.1-SNAPSHOT.jar
