--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,5 @@ services:
     env: java
     plan: free
     buildCommand: mvnw clean install -DskipTests
-    startCommand: java -jar target/app-trello 0.0.1-SNAPSHOT.jar
+    startCommand: java -jar target/*.jar
+
